--- a/css/jquery.pageslide.css
+++ b/css/jquery.pageslide.css
@@ -11,12 +11,8 @@
     width: 260px;
     padding: 20px;
     
-    /* These styles are optional, and describe how the pageslide will look */
-    background-color: #333;
-    color: #FFF;
-    -webkit-box-shadow: inset 0 0 5px 5px #222;
-    -moz-shadow: inset 0 0 5px 5px #222;
-    box-shadow: inset 0 0 5px 5px #222;
+    color: #000;
+    
     
     
 }
