--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:700italic,400italic);
 /* line 4, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/reset/_utilities.scss */
 html {
   margin: 0;
@@ -534,13 +536,22 @@ body.two-col #content {
   overflow-x: hidden;
 }
 
-/* line 26, ../sass/screen.scss */
+@font-face {
+  font-family: "Bemio italic";
+  src: url('../fonts/bemio_italic-webfont.eot');
+  src: url('../fonts/bemio_italic-webfont.eot?#iefix') format('eot'), url('../fonts/bemio_italic-webfont.woff') format('woff'), url('../fonts/bemio_italic-webfont.ttf') format('truetype'), url('../fonts/bemio_italic-webfont.otf') format('opentype'), url('../fonts/bemio_italic-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
+
+/* line 100, ../sass/screen.scss */
 body {
   height: 100%;
   line-height: 1.5;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   color: #333333;
   font-size: 75%;
+  -webkit-font-smoothing: antialiased;
 }
 /* line 51, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_typography.scss */
 body h1, body h2, body h3, body h4, body h5, body h6 {
@@ -1526,7 +1537,16 @@ body textarea {
   height: 250px;
 }
 
-/* line 32, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
+h1.title {
+  font-family: 'Bemio italic';
+  font-size: 48px;
+  color: #fff3f6;
+  font-style: italic;
+  padding-top: 38px;
+}
+
+/* line 115, ../sass/screen.scss */
 #header {
   position: relative;
   height: 54px;
@@ -1534,75 +1554,95 @@ body textarea {
   width: 100%;
 }
 
-/* line 39, ../sass/screen.scss */
-#pageslide {
-  background: none !important;
-}
-
-/* line 43, ../sass/screen.scss */
-#modal {
+/* line 123, ../sass/screen.scss */
+#pageslide div {
   display: none;
 }
-/* line 45, ../sass/screen.scss */
-#modal .background {
+/* line 125, ../sass/screen.scss */
+#pageslide div .background {
+  margin-top: 80px;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: black;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-  opacity: 0.7;
+  background-color: white;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+  opacity: 0.4;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
 }
-/* line 50, ../sass/screen.scss */
-#modal .content {
+/* line 133, ../sass/screen.scss */
+#pageslide div .content {
+  margin-top: 80px;
   position: relative;
   width: 100%;
   height: 100%;
   z-index: 2;
 }
 
-/* line 58, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 #wrapper {
   position: absolute;
   width: 100%;
   background-color: red;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 #main {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
-  right: 230px;
-  background-color: blue;
-  height: 2000px;
+  right: 231px;
   margin-left: -300px;
 }
-/* line 69, ../sass/screen.scss */
-#main #content {
-  margin-left: 300px;
-  background-color: orange;
-}
-
-/* line 77, ../sass/screen.scss */
-#sidebar {
+/* line 152, ../sass/screen.scss */
+#main .spacer {
+  width: 300px;
+  border-top: none;
+  border-right: 1px solid #68d7e0;
+  border-bottom: 1px solid #3886ad;
+  border-left: 1px solid #68d7e0;
+  height: 100%;
   display: inline;
   float: left;
-  margin-right: 0;
-  width: 230px;
-  display: inline;
-  float: right;
-  background-color: green;
-  height: 2000px;
-}
-/* line 147, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
-* html #sidebar {
-  overflow-x: hidden;
 }
 
-/* line 86, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
+#sidebar {
+  position: relative;
+  display: inline;
+  float: right;
+}
+/* line 166, ../sass/screen.scss */
+#sidebar .content {
+  width: 230px;
+  display: inline;
+  float: left;
+  border-top: 1px solid #b7e83f;
+  border-right: 1px solid #5ba521;
+  border-bottom: 1px solid #5ba521;
+  border-left: 1px solid #b7e83f;
+  height: 2000px;
+}
+/* line 174, ../sass/screen.scss */
+#sidebar .spacer {
+  width: 300px;
+  border-top: 1px solid #b7e83f;
+  border-right: none;
+  border-bottom: 1px solid #5ba521;
+  border-left: 1px solid #b7e83f;
+  margin-right: -300px;
+  height: 2000px;
+  display: inline;
+  float: left;
+}
+
+/* line 184, ../sass/screen.scss */
 #footer {
   position: fixed;
   bottom: 0;
@@ -1612,13 +1652,13 @@ body textarea {
   left: 0;
   right: 0;
 }
-/* line 87, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 #footer .wrapper {
   position: relative;
   width: 100%;
   text-align: center;
 }
-/* line 91, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 #footer .wrapper button {
   width: 60px;
   height: 60px;
@@ -1627,18 +1667,18 @@ body textarea {
   margin-top: -60px;
 }
 
-/* line 108, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 .subnav {
-  right: 230px;
+  right: 231px;
   height: 50px;
 }
 
-/* line 113, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 .subnav-fixed {
   position: fixed;
   top: 0;
   left: 0;
-  right: 230px;
+  right: 231px;
   z-index: 1020;
   background-color: grey;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
@@ -1651,78 +1691,272 @@ body textarea {
   border-radius: 0;
 }
 
-/* line 125, ../sass/screen.scss */
+/* line 223, ../sass/screen.scss */
 .buttons_bar {
   width: 90%;
   position: absolute;
   text-align: right;
   bottom: 0;
+  z-index: 999;
 }
 
-/* line 132, ../sass/screen.scss */
+/* line 231, ../sass/screen.scss */
 #events {
   overflow: hidden;
-  width: 100%;
-  height: 300px;
-  background-color: red;
-  padding-left: 50px;
+  *zoom: 1;
   position: relative;
 }
+/* line 234, ../sass/screen.scss */
+#events .content {
+  overflow-y: hidden;
+  height: 500px;
+  padding-left: 50px;
+  border-top: 1px solid #68d7e0;
+  border-right: 1px solid #3886ad;
+  border-bottom: 1px solid #3886ad;
+  border-left: 1px solid #3886ad;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 300px;
+  right: 0;
+}
+/* line 247, ../sass/screen.scss */
+#events .spacer {
+  width: 300px;
+  border-top: 1px solid #3886ad;
+  border-right: 1px solid #68d7e0;
+  border-bottom: 1px solid #3886ad;
+  border-left: 1px solid #68d7e0;
+  height: 500px;
+  display: inline;
+  float: left;
+}
 
-/* line 142, ../sass/screen.scss */
+/* line 255, ../sass/screen.scss */
 #locations {
   overflow: hidden;
-  padding-top: 50px;
-  width: 100%;
-  height: 300px;
-  background-color: purple;
-  padding-left: 50px;
+  *zoom: 1;
   position: relative;
 }
+/* line 258, ../sass/screen.scss */
+#locations .content {
+  overflow-y: hidden;
+  height: 500px;
+  padding-left: 50px;
+  border-top: 1px solid #68d7e0;
+  border-right: 1px solid #3886ad;
+  border-bottom: 1px solid #3886ad;
+  border-left: 1px solid #3886ad;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 300px;
+  right: 0;
+}
+/* line 269, ../sass/screen.scss */
+#locations .spacer {
+  width: 300px;
+  border-top: 1px solid #3886ad;
+  border-right: 1px solid #68d7e0;
+  border-bottom: 1px solid #3886ad;
+  border-left: 1px solid #68d7e0;
+  height: 500px;
+  display: inline;
+  float: left;
+}
 
-/* line 153, ../sass/screen.scss */
+/* line 277, ../sass/screen.scss */
 #blog {
   overflow: hidden;
-  padding-top: 50px;
-  width: 100%;
-  height: 300px;
-  background-color: yellow;
-  padding-left: 50px;
+  *zoom: 1;
   position: relative;
 }
+/* line 280, ../sass/screen.scss */
+#blog .content {
+  overflow-y: hidden;
+  height: 500px;
+  padding-left: 50px;
+  border-top: 1px solid #68d7e0;
+  border-right: 1px solid #3886ad;
+  border-bottom: 1px solid #3886ad;
+  border-left: 1px solid #3886ad;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 300px;
+  right: 0;
+}
+/* line 291, ../sass/screen.scss */
+#blog .spacer {
+  width: 300px;
+  border-top: 1px solid #3886ad;
+  border-right: 1px solid #68d7e0;
+  border-bottom: 1px solid #3886ad;
+  border-left: 1px solid #68d7e0;
+  height: 500px;
+  display: inline;
+  float: left;
+}
 
-/* line 164, ../sass/screen.scss */
-#people {
+/* line 299, ../sass/screen.scss */
+#cooks, #gnammers {
   overflow: hidden;
-  padding-top: 50px;
-  width: 100%;
-  height: 300px;
-  background-color: white;
-  padding-left: 50px;
+  *zoom: 1;
   position: relative;
 }
-
-/* line 178, ../sass/screen.scss */
-.wrapper .item {
-  margin: 15px;
-  width: 140px;
-  height: 200px;
-  background-color: lightblue;
+/* line 302, ../sass/screen.scss */
+#cooks .content, #gnammers .content {
+  overflow-y: hidden;
+  height: 500px;
+  padding-left: 50px;
+  border-top: 1px solid #e55c00;
+  border-right: 1px solid #ffb140;
+  border-bottom: 1px solid #ffb140;
+  border-left: 1px solid #ffb140;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 300px;
+  right: 0;
+}
+/* line 313, ../sass/screen.scss */
+#cooks .spacer, #gnammers .spacer {
+  width: 300px;
+  border-top: 1px solid #ffb140;
+  border-right: 1px solid #e55c00;
+  border-bottom: 1px solid #ffb140;
+  border-left: 1px solid #e55c00;
+  height: 500px;
+  display: inline;
+  float: left;
 }
 
-/* line 186, ../sass/screen.scss */
+/* line 322, ../sass/screen.scss */
+.wrapper {
+  margin-top: 15px;
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 326, ../sass/screen.scss */
+.wrapper .event.single {
+  display: inline;
+  float: left;
+}
+/* line 330, ../sass/screen.scss */
+.wrapper .event.single .date {
+  border-top: 1px solid #68d7e0;
+  width: 226px;
+  padding-left: 20px;
+  margin-bottom: 30px;
+  float: left;
+  background-image: -webkit-gradient(radial, 50% 0, 0, 50% 0, 60, color-stop(0%, rgba(121, 212, 216, 0.5)), color-stop(60%, rgba(121, 212, 216, 0)));
+  background-image: -webkit-radial-gradient(50% 0, rgba(121, 212, 216, 0.5), rgba(121, 212, 216, 0) 60%);
+  background-image: -moz-radial-gradient(50% 0, rgba(121, 212, 216, 0.5), rgba(121, 212, 216, 0) 60%);
+  background-image: -o-radial-gradient(50% 0, rgba(121, 212, 216, 0.5), rgba(121, 212, 216, 0) 60%);
+  background-image: -ms-radial-gradient(50% 0, rgba(121, 212, 216, 0.5), rgba(121, 212, 216, 0) 60%);
+  background-image: radial-gradient(50% 0, rgba(121, 212, 216, 0.5), rgba(121, 212, 216, 0) 60%);
+}
+/* line 338, ../sass/screen.scss */
+.wrapper .event.single .date .day {
+  font-family: 'Bemio italic';
+  font-size: 55px;
+  color: #80dadd;
+  font-style: italic;
+  line-height: 64px;
+  float: left;
+  margin-right: 10px;
+}
+/* line 347, ../sass/screen.scss */
+.wrapper .event.single .date .month {
+  font-family: 'Bemio italic';
+  font-style: italic;
+  font-size: 24px;
+  color: #80dadd;
+  text-transform: capitalize;
+  line-height: 36px;
+}
+/* line 355, ../sass/screen.scss */
+.wrapper .event.single .date .place {
+  font-family: 'Bemio italic';
+  font-style: italic;
+  font-size: 18px;
+  color: #fff3f6;
+  margin-top: -10px;
+  line-height: 27px;
+}
+/* line 365, ../sass/screen.scss */
+.wrapper .event.single .mask {
+  width: 246px;
+  height: 298px;
+  overflow: hidden;
+  border-bottom: 1px solid #3886ad;
+}
+/* line 372, ../sass/screen.scss */
+.wrapper .event.single .mask .card {
+  width: 216px;
+  height: 290px;
+  margin: 10px 10px 10px 14px;
+  -webkit-border-radius: 6px 6px;
+  -moz-border-radius: 6px / 6px;
+  -ms-border-radius: 6px / 6px;
+  -o-border-radius: 6px / 6px;
+  border-radius: 6px / 6px;
+  -webkit-box-shadow: 1px 2px 10px rgba(11, 78, 107, 0.5);
+  -moz-box-shadow: 1px 2px 10px rgba(11, 78, 107, 0.5);
+  box-shadow: 1px 2px 10px rgba(11, 78, 107, 0.5);
+  border: 2px solid #fff3f6;
+}
+/* line 381, ../sass/screen.scss */
+.wrapper .event.single .mask .card img {
+  height: 290px;
+  -webkit-border-radius: 3px 3px;
+  -moz-border-radius: 3px / 3px;
+  -ms-border-radius: 3px / 3px;
+  -o-border-radius: 3px / 3px;
+  border-radius: 3px / 3px;
+}
+/* line 386, ../sass/screen.scss */
+.wrapper .event.single .mask .card .avatar {
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  width: 80px;
+  height: 80px;
+  -webkit-border-radius: 6px 6px;
+  -moz-border-radius: 6px / 6px;
+  -ms-border-radius: 6px / 6px;
+  -o-border-radius: 6px / 6px;
+  border-radius: 6px / 6px;
+  -webkit-box-shadow: 1px 2px 10px rgba(11, 78, 107, 0.5);
+  -moz-box-shadow: 1px 2px 10px rgba(11, 78, 107, 0.5);
+  box-shadow: 1px 2px 10px rgba(11, 78, 107, 0.5);
+  border: 2px solid #fff3f6;
+}
+/* line 396, ../sass/screen.scss */
+.wrapper .event.single .mask .card .avatar img {
+  width: 80px;
+  height: 80px;
+  -webkit-border-radius: 4px 4px;
+  -moz-border-radius: 4px / 4px;
+  -ms-border-radius: 4px / 4px;
+  -o-border-radius: 4px / 4px;
+  border-radius: 4px / 4px;
+}
+
+/* line 409, ../sass/screen.scss */
 .isotope-item {
   z-index: 2;
 }
 
-/* line 190, ../sass/screen.scss */
+/* line 413, ../sass/screen.scss */
 .isotope-hidden.isotope-item {
   pointer-events: none;
   z-index: 1;
 }
 
 /**** Isotope CSS3 transitions ****/
-/* line 198, ../sass/screen.scss */
+/* line 421, ../sass/screen.scss */
 .isotope,
 .isotope .isotope-item {
   -webkit-transition-duration: 0.8s;
@@ -1732,7 +1966,7 @@ body textarea {
   transition-duration: 0.8s;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 429, ../sass/screen.scss */
 .isotope {
   -webkit-transition-property: height, width;
   -moz-transition-property: height, width;
@@ -1741,7 +1975,7 @@ body textarea {
   transition-property: height, width;
 }
 
-/* line 214, ../sass/screen.scss */
+/* line 437, ../sass/screen.scss */
 .isotope .isotope-item {
   -webkit-transition-property: -webkit-transform, opacity;
   -moz-transition-property: -moz-transform, opacity;
@@ -1751,7 +1985,7 @@ body textarea {
 }
 
 /**** disabling Isotope CSS3 transitions ****/
-/* line 226, ../sass/screen.scss */
+/* line 449, ../sass/screen.scss */
 .isotope.no-transition,
 .isotope.no-transition .isotope-item,
 .isotope .isotope-item.no-transition {
@@ -1760,4 +1994,53 @@ body textarea {
   -ms-transition-duration: 0s;
   -o-transition-duration: 0s;
   transition-duration: 0s;
+}
+
+/* line 457, ../sass/screen.scss */
+.mosaic-backdrop {
+  width: 216px;
+  height: 290px;
+  margin: 10px 10px 10px 14px;
+  display: none;
+  position: absolute;
+  top: 0;
+}
+
+/* line 467, ../sass/screen.scss */
+.mosaic-overlay {
+  display: none;
+  z-index: 5;
+  position: relative;
+  display: inline;
+  float: left;
+}
+
+/* line 475, ../sass/screen.scss */
+.orange {
+  background-color: #ff7d08;
+}
+
+/* line 480, ../sass/screen.scss */
+.green, #sidebar .content {
+  background-color: #99cc33;
+}
+
+/* line 485, ../sass/screen.scss */
+.blue, #main .spacer, #events .content, #blog .content {
+  background-color: #33bbcc;
+}
+
+/* line 490, ../sass/screen.scss */
+.sidebar-blue, #events .spacer, #locations .content, #locations .spacer, #blog .spacer {
+  background-color: #2baabc;
+}
+
+/* line 493, ../sass/screen.scss */
+.sidebar-orange, #cooks .content, #gnammers .content, #cooks .spacer, #gnammers .spacer {
+  background-color: #fd7b30;
+}
+
+/* line 496, ../sass/screen.scss */
+.sidebar-green, #sidebar .spacer {
+  background-color: #93c850;
 }
