--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -18,16 +18,99 @@
 @import "compass/css3/opacity";
 @import "compass/css3/border-radius";
 @import "compass/utilities/general/float";
+@import "compass/css3/box-shadow";
+@import "compass/css3/font-face";
+
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:700italic,400italic);
+@include font-face("Bemio italic", font-files("bemio_italic-webfont.woff","bemio_italic-webfont.ttf","bemio_italic-webfont.otf", "bemio_italic-webfont.svg"), "bemio_italic-webfont.eot", normal, italic);
 
 $sidebar-width: 300px;
-$stories-width: 230px;
+$stories-width: 231px;
 $subnav-height: 50px;
+
+$blu_shadow: #0B4E6B;
+$blu_bg: #33BBCC;
+$orange_bg: #FF7D08;
+$white_border: #FFF3F6;
+$blu_dark_border: #3886AD;
+$blu_text: #0B4C63;
+$blu_dark_text: #135C7C;
+$blu_light_border: #68D7E0;
+$azzurro_text: #80DADD;
+$grigio_bg: #D7E2DE;
+$grigio_text: #575958;
+$grigio_dark_text: #373A39;
+$orange_text: #E85605;
+$orange_dark_text: #D13B07;
+$azzurro_chiaro_text: #8ADDDD;
+
+$sidebar-blue: #2baabc;
+$sidebar-orange: #fd7b30;
+$sidebar-green: #93c850;
+
+$orange: #FF7D08;
+$orange-light: #E55C00;
+$orange-dark: #FFB140;
+
+$green: #99CC33;
+$green-light: #B7E83F;
+$green-dark: #5BA521;
+
+$blue:  #33BBCC;
+$blue-light: #68D7E0;
+$blue-dark: #3886AD;
+
+
+@mixin shader($normal: #ccc, $light: #fff, $dark: #000, $thickness: 1px , $t: light, $r: light, $b: light, $l: light){
+	
+	@if $t == light {
+		border-top: $thickness solid $light;
+	} @else if $t == dark {
+		border-top: $thickness solid $dark;
+	} @else {
+		border-top: none;
+	}
+	
+	@if $r == light {
+		border-right: $thickness solid $light;
+	} @else if $r == dark {
+		border-right: $thickness solid $dark;
+	} @else {
+		border-right: none;
+	}
+	
+	@if $b == light {
+		border-bottom: $thickness solid $light;
+	} @else if $b == dark {
+		border-bottom: $thickness solid $dark;
+	} @else {
+		border-bottom: none;
+	}
+	
+	@if $l == light {
+		border-left: $thickness solid $light;
+	} @else if $l == dark {
+		border-left: $thickness solid $dark;
+	} @else {
+		border-left: none;
+	}
+}
 
 body{
 	height: 100%;
 	@include blueprint(true);
+	-webkit-font-smoothing: antialiased;
 }
 
+
+h1.title{
+	font-family: 'Bemio italic';
+	font-size: 48px;
+	color: $white_border;
+	font-style: italic;
+	padding-top: 38px;
+}
 
 #header{
 	position: relative;
@@ -37,21 +120,23 @@ body{
 }
 
 #pageslide{
-	background: none !important;
-}
-
-#modal{
-	display: none;
-	.background{
-		@include stretch();
-		background-color: black;
-		@include opacity(0.7);
-	}
-	.content{
-		position: relative;
-		width: 100%;
-		height: 100%;
-		z-index: 2;
+	div{
+		display: none;
+		.background{
+			margin-top: 80px;
+			@include stretch();
+			background-color: white;
+			@include opacity(0.4);
+			@include border-radius(6px);
+			
+		}
+		.content{
+			margin-top: 80px;
+			position: relative;
+			width: 100%;
+			height: 100%;
+			z-index: 2;
+		}
 	}
 }
 
@@ -63,24 +148,37 @@ body{
 
 #main{
 	@include stretch(0,$stories-width,0,0);
-	background-color: blue;
-	height:  2000px;
 	margin-left: -$sidebar-width;
-	#content{
-		margin-left: $sidebar-width;
-		
-		background-color: orange;
-		
+		.spacer{
+			width: $sidebar-width;
+			@include shader($blue, $blue-light, $blue-dark, 1px , none, light, dark, light);
+			@extend .blue;
+			height: 100%;
+			@include float-left;
+		}
+
 	
-	}
 }
 #sidebar{
-	@include column(6,last);
+
+	position: relative;
 	@include float-right;
-	background-color: green;
-	height: 2000px;
-	
-	
+	.content{
+		width: 230px;
+		@include float-left;
+		
+		@include shader($green, $green-light, $green-dark, 1px , light, dark, dark, light);
+		@extend .green;
+		height: 2000px;
+	}
+	.spacer{
+		width: $sidebar-width;
+		@include shader($green, $green-light, $green-dark, 1px , light, none, dark, light);
+		@extend .sidebar-green;
+		margin-right: -$sidebar-width;
+		height: 2000px;
+		@include float-left;
+	}
 }
 
 #footer{
@@ -127,59 +225,184 @@ border-width: 0 0 1px;
 	position: absolute;
 	text-align: right;
 	bottom: 0;
+	z-index: 999;
 }
 
 #events{
-	overflow: hidden;
-	width: 100%;
-	height: 300px;
-	background-color: red;
-	padding-left: 50px;
+	@include clearfix;
 	position: relative;
+	.content{
+		overflow-y: hidden;
+		
+		height: 500px;
+		padding-left: 50px;
+		
+		@include shader($blue, $blue-light, $blue-dark, 1px , light, dark, dark, dark);
+		@extend .blue;
+		@include stretch(0,0,0,$sidebar-width);
+		
+		
+	}
 	
-
+	.spacer{
+		width: $sidebar-width;
+		@include shader($blue, $blue-light, $blue-dark, 1px , dark, light, dark, light);
+		@extend .sidebar-blue;
+		height: 500px;
+		@include float-left;
+	}
 }
 #locations{
-	overflow: hidden;
-	padding-top: $subnav-height;	
-	width: 100%;
-	height: 300px;
-	background-color: purple;
-	padding-left: 50px;
+	@include clearfix;
 	position: relative;
+	.content{
+		overflow-y: hidden;
+		
+		height: 500px;
+		padding-left: 50px;
+		
+		@include shader($blue, $blue-light, $blue-dark, 1px , light, dark, dark, dark);
+		@extend .sidebar-blue;
+		@include stretch(0,0,0,$sidebar-width);
+	}
 	
-
+	.spacer{
+		width: $sidebar-width;
+		@include shader($blue, $blue-light, $blue-dark, 1px , dark, light, dark, light);
+		@extend .sidebar-blue;
+		height: 500px;
+		@include float-left;
+	}
 }
 #blog{
-	overflow: hidden;
-	padding-top: $subnav-height;
-	width: 100%;
-	height: 300px;
-	background-color: yellow;
-	padding-left: 50px;
+	@include clearfix;
 	position: relative;
+	.content{
+		overflow-y: hidden;
+		
+		height: 500px;
+		padding-left: 50px;
+		
+		@include shader($blue, $blue-light, $blue-dark, 1px , light, dark, dark, dark);
+		@extend .blue;
+		@include stretch(0,0,0,$sidebar-width);
+	}
 	
-
+	.spacer{
+		width: $sidebar-width;
+		@include shader($blue, $blue-light, $blue-dark, 1px , dark, light, dark, light);
+		@extend .sidebar-blue;
+		height: 500px;
+		@include float-left;
+	}
 }
-#people{
-	overflow: hidden;
-	padding-top: $subnav-height;
-	width: 100%;
-	height: 300px;
-	background-color: white;
-	padding-left: 50px;
+#cooks,#gnammers{
+	@include clearfix;
 	position: relative;
+	.content{
+		overflow-y: hidden;
+		
+		height: 500px;
+		padding-left: 50px;
+		
+		@include shader($orange, $orange-light, $orange-dark, 1px , light, dark, dark, dark);
+		@extend .sidebar-orange;
+		@include stretch(0,0,0,$sidebar-width);
+	}
 	
-
+	.spacer{
+		width: $sidebar-width;
+		@include shader($orange, $orange-light, $orange-dark, 1px , dark, light, dark, light);
+		@extend .sidebar-orange;
+		height: 500px;
+		@include float-left;
+	}
 }
 
 .wrapper{
+	margin-top: 15px;
+	@include clearfix;
 	
-	.item{
-		margin: 15px;
-		width: 140px;
-		height: 200px;
-		background-color: lightblue;
+	.event.single{
+		@include float-left;
+		
+	
+		.date{
+			border-top: 1px solid $blu_light_border;
+			width: 226px;
+			padding-left: 20px;
+			margin-bottom: 30px;
+			float: left;
+			@include background-image(radial-gradient(50% 0, rgba(121,212,216,0.5), rgba(121,212,216,0) 60%));
+				
+					.day{
+						font-family: 'Bemio italic';
+						font-size: 55px;
+						color: $azzurro_text;
+						font-style: italic;
+						line-height: 64px;
+						float: left;
+						margin-right: 10px;
+						}
+					.month{
+						font-family: 'Bemio italic';
+						font-style: italic;
+						font-size: 24px;
+						color: $azzurro_text;
+						text-transform: capitalize;
+						line-height: 36px;
+						}
+					.place{
+						font-family: 'Bemio italic';
+						font-style: italic;
+						font-size: 18px;
+						color: $white_border;
+						margin-top: -10px;
+						line-height: 27px;
+						}
+			}
+			
+		.mask{
+			width: 246px;
+			height: 298px;
+			overflow: hidden;
+			
+			border-bottom: 1px solid $blu_dark_border;
+			
+			.card{
+				
+				width: 216px;
+				height: 290px;
+				margin: 10px 10px 10px 14px;
+				@include border-radius(6px, 6px);
+				@include single-box-shadow(rgba(11,78,107,0.5), 1px, 2px, 10px);
+				border: 2px solid $white_border;
+				
+					img{
+						height: 290px;
+						@include border-radius(3px, 3px);
+					}
+					
+				.avatar{
+							position: absolute;
+							top: -7px;
+							right: -7px;
+							width: 80px;
+							height: 80px;
+							@include border-radius(6px, 6px);
+							@include single-box-shadow(rgba(11,78,107,0.5), 1px, 2px, 10px);
+							border: 2px solid $white_border;
+							
+								img{
+									width: 80px;
+									height: 80px;
+									@include border-radius(4px, 4px);
+								}
+								
+						}
+					
+				}
+		}
 	}
 }
 
@@ -229,4 +452,47 @@ border-width: 0 0 1px;
       -ms-transition-duration: 0s;
        -o-transition-duration: 0s;
           transition-duration: 0s;
+}
+
+.mosaic-backdrop{
+	width: 216px;
+	height: 290px;
+	margin: 10px 10px 10px 14px;
+	display: none;
+	position: absolute;
+	top: 0;
+
+}
+
+.mosaic-overlay {
+	display: none;
+	z-index: 5;
+	position: relative;
+	@include float-left;
+
+}
+
+.orange{
+	background-color: $orange;
+	
+}
+
+.green{
+	background-color: $green;
+	
+}
+
+.blue{
+	background-color: $blue;
+	
+
+}
+.sidebar-blue{
+	background-color: $sidebar-blue;
+}
+.sidebar-orange{
+	background-color: $sidebar-orange;
+}
+.sidebar-green{
+	background-color: $sidebar-green;
 }
